--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding: 20px 50px;
     border-radius: 10px;
+    /* height: 200px; */
 }
 
 .input-style {
@@ -32,11 +33,11 @@ body {
 }
 
 .btn-style{
-    padding:5px 10px;
+    padding:5px 15px;
     border-radius: 10px;
     color: blue;
     font-weight: 900;
-    margin: 15px;
+    margin-top: 15px;
     outline: none;
     border: 2px solid lightgray;
     /* background-color: lightgray; */
